<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_login"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginVertical="28dp"
                android:contentDescription="@string/image_description"
                android:src="@drawable/logo" />

            <TextView
                android:id="@+id/tv_login"
                style="@style/h2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_text" />

            <TextView
                android:id="@+id/tv_login_2"
                style="@style/h4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_desc" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/username_layout"
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username_hint">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="name" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email_layout"
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_hint">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password_layout"
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_hint"
                    android:paddingTop="12dp"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/green_primary">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password"
                        style="@style/textEditCustom"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:textSize="16sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/confirm_password_layout"
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_password_hint"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/green_primary">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/confirm_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btn_signup"
                    style="@style/h4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="12dp"
                    android:clickable="true"
                    android:enabled="false"
                    android:focusable="true"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/SignUp"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    app:cornerRadius="10dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginVertical="12dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:textAlignment="center">

                <View
                    android:id="@+id/view"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:background="@color/component"
                    android:minHeight="1dp" />

                <TextView
                    android:id="@+id/textView"
                    style="@style/body"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/or_sign_in_with"
                    android:textColor="@color/component" />

                <View
                    android:id="@+id/view2"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:background="@color/component"
                    android:minHeight="1dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/signInGoogle"
                    style="@style/body"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:backgroundTint="@color/white"
                    android:clickable="true"
                    android:drawableLeft="@drawable/google_drawable"
                    android:drawablePadding="10dp"
                    android:elevation="0dp"
                    android:focusable="true"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:text="@string/google"
                    android:textColor="@color/component"
                    android:textStyle="bold"
                    app:cornerRadius="10dp"
                    app:strokeColor="@color/component"
                    app:strokeWidth="1dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/to_login_page"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="12dp"
                android:clickable="true"
                android:gravity="center_horizontal"
                android:onClick="toLoginPage"
                android:orientation="horizontal">

                <TextView
                    style="@style/body"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/to_signin_text"
                    android:textColor="@color/black" />

                <TextView
                    style="@style/body"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/login_now"
                    android:textColor="@color/green_primary"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>