<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/textView2"
        style="@style/h2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_to_change_password_screen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawableEnd="@drawable/ic_arrow_right"
        android:drawablePadding="0dp"
        android:gravity="left|center_vertical"
        android:padding="12dp"
        android:text="@string/change_password"
        android:textStyle="bold"
        app:cornerRadius="8dp"
        app:iconPadding="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/btn_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawableEnd="@drawable/ic_arrow_right"
        android:drawablePadding="0dp"
        android:gravity="start|center_vertical"
        android:padding="12dp"
        android:text="@string/language"
        android:textStyle="bold"
        app:cornerRadius="10dp"
        app:iconPadding="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_to_change_password_screen" />

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawableEnd="@drawable/ic_arrow_right"
        android:drawablePadding="0dp"
        android:gravity="start|center_vertical"
        android:padding="12dp"
        android:text="@string/logout"
        android:textStyle="bold"
        app:cornerRadius="10dp"
        app:iconPadding="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_language" />


</androidx.constraintlayout.widget.ConstraintLayout>

